# aletheia

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/workflows/: ci.yml
docs/: cond-ssa.md  out-of-ssa.md
src/aletheia/: aletheia.cpp  aletheia.hpp  lifter.cpp  lifter.hpp
src/aletheia/codegen/: c_identifier.hpp  c_type.hpp  codegen.cpp  codegen.hpp  local_declarations.hpp  portable_c.cpp  portable_c.hpp
src/aletheia/debug/: debug_observer.cpp  debug_observer.hpp  expr_tree.cpp  expr_tree.hpp  ir_diff.cpp  ir_diff.hpp  ir_invariants.cpp  ir_invariants.hpp  ir_query.cpp  ir_query.hpp  ir_serializer.cpp  ir_serializer.hpp  stage_metrics.cpp  stage_metrics.hpp  variable_provenance.cpp  variable_provenance.hpp
src/aletheia/frontend/: frontend.cpp  frontend.hpp  frontend_types.hpp  shared_support.cpp  shared_support.hpp
src/aletheia/pcode/: pcode_lifter.cpp  pcode_lifter.hpp  pcode_lowering.cpp  pcode_lowering.hpp
src/aletheia/pipeline/: optimization_stages.cpp  optimization_stages.hpp  pipeline.cpp  pipeline.hpp  preprocessing_stages.cpp  preprocessing_stages.hpp
src/aletheia/pipeline/dataflow_analysis/: dead_code_elimination.cpp  dead_code_elimination.hpp
src/aletheia/pipeline/expressions/: graph_expression_folding.cpp  graph_expression_folding.hpp
src/aletheia/ssa/: conditional_variable_renamer.cpp  conditional_variable_renamer.hpp  dominators.cpp  dominators.hpp  minimal_variable_renamer.cpp  minimal_variable_renamer.hpp  phi_dependency_resolver.cpp  phi_dependency_resolver.hpp  ssa_constructor.cpp  ssa_constructor.hpp  ssa_destructor.cpp  ssa_destructor.hpp
src/aletheia/ssa/liveness/: liveness.cpp  liveness.hpp
src/aletheia/structures/: cfg.cpp  cfg.hpp  dataflow.hpp  types.hpp
src/aletheia/structuring/: ast.cpp  ast.hpp  ast_processor.cpp  ast_processor.hpp  condition_handler.hpp  instruction_length_handler.cpp  instruction_length_handler.hpp  loop_name_generator.cpp  loop_name_generator.hpp  loop_structurer.cpp  loop_structurer.hpp  reachability.hpp  structurer.cpp  structurer.hpp  structuring_stage.cpp  structuring_stage.hpp  transition_cfg.hpp  variable_name_generation.cpp  variable_name_generation.hpp
src/aletheia/structuring/car/: car.cpp  car.hpp
src/aletheia/structuring/cbr/: cbr.cpp  cbr.hpp
src/aletheia/structuring/graph_slice/: graph_slice.cpp  graph_slice.hpp
src/aletheia/structuring/reaching_conditions/: reaching_conditions.cpp  reaching_conditions.hpp
src/cli/: idump.cpp
src/common/: arena.cpp  arena.hpp  arena_allocated.hpp  small_vector.hpp  types.hpp
src/dewolf/: dewolf.cpp  dewolf.hpp  lifter.cpp  lifter.hpp
src/dewolf/codegen/: codegen.cpp  codegen.hpp  local_declarations.hpp
src/dewolf/pipeline/: optimization_stages.cpp  optimization_stages.hpp  pipeline.cpp  pipeline.hpp  preprocessing_stages.cpp  preprocessing_stages.hpp
src/dewolf/pipeline/dataflow_analysis/: dead_code_elimination.cpp  dead_code_elimination.hpp
src/dewolf/pipeline/expressions/: graph_expression_folding.cpp  graph_expression_folding.hpp
src/dewolf/ssa/: conditional_variable_renamer.cpp  conditional_variable_renamer.hpp  dominators.cpp  dominators.hpp  minimal_variable_renamer.cpp  minimal_variable_renamer.hpp  phi_dependency_resolver.cpp  phi_dependency_resolver.hpp  ssa_constructor.cpp  ssa_constructor.hpp  ssa_destructor.cpp  ssa_destructor.hpp
src/dewolf/ssa/liveness/: liveness.cpp  liveness.hpp
src/dewolf/structures/: cfg.cpp  cfg.hpp  dataflow.hpp  types.hpp
src/dewolf/structuring/: ast.cpp  ast.hpp  condition_handler.hpp  instruction_length_handler.cpp  instruction_length_handler.hpp  loop_name_generator.cpp  loop_name_generator.hpp  loop_structurer.cpp  loop_structurer.hpp  reachability.hpp  structurer.cpp  structurer.hpp  structuring_stage.cpp  structuring_stage.hpp  transition_cfg.hpp  variable_name_generation.cpp  variable_name_generation.hpp
src/dewolf/structuring/car/: car.cpp  car.hpp
src/dewolf/structuring/cbr/: cbr.cpp  cbr.hpp
src/dewolf/structuring/graph_slice/: graph_slice.cpp  graph_slice.hpp
src/dewolf/structuring/reaching_conditions/: reaching_conditions.cpp  reaching_conditions.hpp
src/dewolf_idioms/: idiom_resolver.cpp  idiom_resolver.hpp  idioms.cpp  idioms.hpp  magic_maps.hpp  patterns.hpp
src/dewolf_logic/: bitwise_simplifier.cpp  bitwise_simplifier.hpp  dag.cpp  dag.hpp  logic.hpp  normal_form.cpp  normal_form.hpp  operation_simplifier.cpp  operation_simplifier.hpp  range_simplifier.cpp  range_simplifier.hpp  world.cpp  world.hpp  z3_logic.cpp  z3_logic.hpp
src/idiomata/: idiom_resolver.cpp  idiom_resolver.hpp  idioms.cpp  idioms.hpp  magic_maps.hpp  patterns.hpp  patterns_data.cpp
src/logos/: bitwise_simplifier.cpp  bitwise_simplifier.hpp  dag.cpp  dag.hpp  logic.hpp  normal_form.cpp  normal_form.hpp  operation_simplifier.cpp  operation_simplifier.hpp  range_simplifier.cpp  range_simplifier.hpp  world.cpp  world.hpp  z3_logic.cpp  z3_logic.hpp
src/plugin/: plugin.cpp
tests/: portable_c_fibonacci_harness.c.in  portable_c_fixture_generator.cpp  portable_c_hfa_arguments_harness.c.in  portable_c_hfa_return_harness.c.in  portable_c_indirect_return_harness.c.in  portable_c_pair_return_harness.c.in  portable_c_real_binary_harness.c.in  portable_c_relocation_harness.c.in  portable_c_stack_arguments_harness.c.in  portable_c_x86_64_basic_harness.c.in  test_debug.cpp  test_idalib.cpp  test_idiom_resolver.cpp  test_main.cpp  test_pcode_lowering.cpp
tests/targets/: native_x86_64_basic.c  oracle.c  pcode_data_relocation.c  pcode_float_stack_arguments.c  pcode_hfa_arguments.c  pcode_hfa_return.c  pcode_indirect_return.c  pcode_pair_return.c  pcode_stack_arguments.c  structured_example.c  test_binary  test_binary.c  test_binary.i64  test_binary.id0  test_binary.id1  test_binary.nam
